# simls

./: CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  main.yml  release.yml
src/: cli.rs  main.rs  utils.rs
src/commands/: create.rs  delete.rs  erase.rs  list.rs  mod.rs  start.rs  stop.rs
src/structs/: android_devices.rs  devices.rs  ios_devices.rs  mod.rs
src/utils/: android.rs  ios.rs  mod.rs
