[package]
name = "simls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple cli tool that allows for managing of android emulators & iOS simulators."
homepage = "https://github.com/jeroenzeelmaekers/simls"
repository = "https://github.com/jeroenzeelmaekers/simls"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
