[package]
name = "simls"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple cli tool that allows for managing of android emulators & iOS simulators."
homepage = "https://github.com/jeroenzeelmaekers/simls"
repository = "https://github.com/jeroenzeelmaekers/simls"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.0.0"
dialoguer = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
